Order index page css

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -23,3 +23,11 @@
   width: 100px;
   display: inline-block;
 }
+
+.admin_orders table.index_table td {
+  padding: 10px 2px;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  max-height: 50px;
+  max-width: 90px;
+}
